# ear-job-visualization

./: .gitignore  .gitmodules  FEATURES.md  MANIFEST.in  README.md  config.ini  config.json  cpu_imc_vis.py  create_module.py  ear_analytics.py  ear_analytics_jl.py  environment.yml  events_show.py  metrics.py  per-proc-ear_analytics.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml
common/: ear_data.py  io_api.py  job_summary.py  metrics.py  phases.py  query.py  utils.py
ear-job-analytics/common/: job_summary.py
ear-job-analytics/templates/tables/: job_summary.tex
examples/: pop_loops.csv  resume_multiple_apps.csv
examples/bqcd/: ear_app_log.cmp2501.time.csv  ear_app_log.cmp2504.time.csv
examples/csvs/: README.md  dgemm_1n_app_signature_j25335297_s1.csv  dgemm_1n_loop_signatures_j25335297_s1.csv
examples/csvs/traces/: dgemm_1n_loop_signatures_j25335297_s1.pcf  dgemm_1n_loop_signatures_j25335297_s1.prv  dgemm_1n_loop_signatures_j25335297_s1.row
examples/paraver_cfgs/: basic_and_gpu_5.0.cfg  basic_metrics_5.0.cfg
examples/runtime_format/: 69478_apps.csv  69478_loops.csv
extra/: per-core_estimation-from_learning.py
extra/examples/bqcd/: ear_app_log.cmp2502.time.csv  ear_app_log.cmp2503.time.csv
extra/examples/bt_test_loops/: bt_test_report.cmp2519.time.loops.csv  bt_test_report.cmp2520.time.loops.csv  bt_test_report.cmp2521.time.loops.csv  bt_test_report.cmp2522.time.loops.csv
extra/examples/vasp-policy-comparison/: vasp-1218623-policies-resume.csv  vasp-fixed_freqs-resume.csv
extra/still_under_development/: config.ini
src/: config.json  ear_analytics.py
src/config/: events_config.json
src/ear_analytics/: __init__.py  config.json  ear_analytics.py  ear_data.py  events.py  io_api.py  job_summary.py  metrics.py  phases.py  static_figures.py  utils.py
src/ear_analytics/common/: ear_data.py  phases.py
src/ear_analytics/config/: events_config_snellius.json
src/ear_analytics/extra/: events_show.py
src/ear_analytics/templates/: main.tex.template
src/ear_analytics/templates/text/: agg_gpupwr.tex  gpu_util.tex  job_gpu_summary.tex
src/ear_job_visualization/: ear_job_viz.py
src/ear_job_visualize/: config.json  ear_job_viz.py
src/interactive_visualizer_demo/: README.md  data_generator.py  interactive_plotting_demo.py
templates/: main.tex.template
templates/tables/: job_gpu_summary.tex  job_phases_summary.tex
templates/text/: title.tex
