[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "ear-job-visualization"
authors = [
    {name = "Oriol Vidal", email = "oriol.vidal@eas4dc.com"},
    {name = "Jalal Lakhlili", email = "jalal.lakhlili@eas4dc.com"}
]
description = "High level support for read and visualize job information given by the EAR Library."
readme = "README.md"
# requires-python = "<3.9"
keywords = ["data", "visualization", "hpc", "analysis", "ear", "paraver"]
license = {text = "EPL-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
]
version = "5.2.0"
dependencies = [
	"matplotlib",
    "pandas",
    "importlib_resources",
	"rich"
]

[project.scripts]
ear-job-visualizer = "ear_job_visualize.ear_job_viz:main"
