[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "ear-job-visualization"
authors = [
    {name = "Oriol Vidal", email = "oriol.vidal@eas4dc.com"},
    {name = "Jalal Lakhlili", email = "jalal.lakhlili@eas4dc.com"}
]
description = "High level support for read and visualize job information given by the EAR Library."
readme = "README.md"
requires-python = ">3.9"
keywords = ["data", "visualization", "hpc", "analysis", "ear", "paraver"]
license = "EPL-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
]
version = "5.2.3"
dependencies = [
    "pandas[performance,plot,output-formatting]",
    "importlib_resources",
	"rich",
    "ear_analytics_core >=5.0.0, <6.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ear_job_visualization = ["config.json"]

[project.scripts]
ear-job-visualizer = "ear_job_visualization.ear_job_viz:main"
